--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.kmk_uniworld.Views.Login.LoginActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/app_name">
+            android:name=".Views.Login.LoginActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.kmk_uniworld.Views.Home.HomeActivity"></activity>
+        <activity android:name=".Views.Home.HomeActivity" />
+        <activity
+            android:name=".Views.Home.HomeTabActivity"
+            android:label="@string/title_activity_home_tab" />
+        <activity android:name=".Views.NewOrder.AddNewOrder" />
+        <activity android:name=".Views.NewOrder.AddNewSchool"></activity>
     </application>
 
 </manifest>
